# frd2vtu

./: 404.html  CLAUDE.md  LICENSE  Makefile  README.md  index.html  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml  publish.yml  test.yml
api/: index.html
docs/: api.md  examples.md  index.md  installation.md  usage.md
examples/: index.html  run_examples.sh
frd2vtu/: __init__.py  basic_plot.py  cli.py  core.py  frd2vtu.py  plotting.py
installation/: index.html
search/: search_index.json
test/: copy_ccx_examples.py  makefile  test.sh  test_frd2vtu.py
test/frds/: acou4.frd  acou5.frd  acouquad.frd  anipla3.frd  anipla_nl_dy_exp.frd  anipla_nl_dy_imp.frd  anipla_nl_st.frd  artery3.frd  artery4.frd  artery5.frd  b31.frd  ball.frd  beam10psmooth.frd  beam8pjc.frd  beam_sens_freq_coord2.frd  beam_sens_freq_coord3.frd  beam_sens_ps13.frd  beam_sens_stress_coord2.frd  beamcr3.frd  beamexpdy1.frd  beamf.frd  beamf3.frd  beamfrdread.frd  beamhtfcnu.frd  beamimpdy1.frd  beamimpdy1nodirect.frd  beamimpdy2.frd  beamnldye.frd  beamnldye20.frd  beamnldyems.frd  beamnldyeortho.frd  beamnldynodirect.frd  beamnldyp.frd  beamnldype.frd  beamp.frd  beamp1rotate.frd  beamp2.frd  beamp3.frd  beamp_ciarlet.frd  beamperror.frd  (+95 more)
usage/: index.html
validation/: copy_ccx_examples.py  runscript.sh  validate.sh
