[project]
name = "frd2vtu"
version = "0.1.8"
description = "converter from calculix binary frd to vtu"
authors = [{ name = "wr1", email = "8971152+wr1@users.noreply.github.com" }]
requires-python = ">=3.11"
readme = "README.md"
license = "MIT"
dependencies = [
    "pyvista>=0.44.2",
    "pandas>=2.2.0",
    "numpy>=2.2.6",
    "rich-click",
    "treeparse",
]

[project.scripts]
frd2vtu = "frd2vtu.cli:main"
frd2vtu_plot = "frd2vtu.plotting:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
addopts = "--cov=."
